--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,8 @@
+=== 1.3.0.rc1 / 12 Mar 2016
+
+* Make sure we wait no more than keeepalive in select [Eugene Kenny]
+* Forward action [Yukihiko SAWANOBORI]
+* Net-ssh 3.0 compatibility [Balasankar C]
 
 === 1.2.1 / 11 Apr 2015
 
